<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">خودخوان</string>
    <string name="Terming">ترم تحصیلی</string>
    <string name="termName">نام ترم</string>
    <string name="startDate">تاریخ شروع</string>
    <string name="endDate">تاریخ پایان</string>
    <string name="save">ثبت</string>
    <string name="Delete">حذف</string>
    <string name="bookName">نام کتاب</string>
    <string name="pageCount">تعداد صفحات</string>
    <string name="AddRead">خواندن</string>
    <string name="pageRead">تعداد صفحه خوانده شده</string>
    <string name="PerformanceTitle">عملکرد</string>
    <string name="ReadDate">تاریخ مطالعه</string>
    <string name="app_subtitle">همراه شما در کتاب خوانی</string>
    <string name="Booking">کتاب های ترم</string>
    <string name="Reading">خوانده</string>
    <string name="prescribtion">پیشنهادات</string>
    <string name="Reseting">تنظیم مجدد</string>
    <string name="FreeBooking">مطالعه آزاد</string>
    <string name="addBook">کتاب جدید</string>
    <string name="AddTerm">ترم جدید</string>
    <string name="AddFreeBook">مطالعه آزاد</string>
    <string name="underLine">-</string>
    <string name="select">انتخاب</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string-array name="term_type">
        <item>ترم اول سال تحصیلی</item>
        <item>ترم دوم سال تحصیلی</item>
        <item>ترم تابستان سال تحصیلی</item>
        <item>تا کنکور</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
