<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"

            android:text="@string/Booking"/>
    <Spinner
            android:id="@+id/BookNameList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:spinnerMode="dropdown"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:text="@string/pageRead"/>
    <EditText
            android:id="@+id/PageReaded"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
            android:inputType="number"
            />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:text="@string/ReadDate"/>
    <EditText
            android:id="@+id/ReadDate"
            android:clickable="true"
            android:focusable="false"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

</LinearLayout>