<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/term_name_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/termName"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/term_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/term_start_date_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:errorEnabled="true"
        android:clickable="true"
        android:hint="@string/startDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/term_start_date"
            android:focusable="false"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/term_end_date_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:errorEnabled="true"
        android:clickable="true"
        android:hint="@string/endDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/term_end_date"
            android:focusable="false"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!--<androidx.appcompat.widget.AppCompatTextView-->
        <!--android:id="@+id/term_start_date"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="16dp"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:hint="@string/startDate"-->
        <!--android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->


    <!--<androidx.appcompat.widget.AppCompatTextView-->
        <!--android:id="@+id/term_end_date"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="16dp"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:hint="@string/endDate"-->
        <!--android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->

    <Button
        android:id="@+id/term_save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="72dp"
        android:text="@string/save" />

</LinearLayout>