<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffdce1e3"
        >
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
        <LinearLayout
                android:id="@+id/con"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_marginTop="8dp"
                android:background="@drawable/shadow"
                android:paddingBottom="24dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:gravity="center"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PerformanceTitle"
                    android:textSize="18sp"

                    />

            <com.github.lzyzsd.circleprogress.DonutProgress
                    android:layout_marginTop="@dimen/padding"
                    android:id="@+id/performanceCircle"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    custom:donut_unfinished_color="#ffdce1e3"
                    custom:donut_finished_stroke_width="16dp"
                    custom:donut_unfinished_stroke_width="16dp"
                    custom:donut_text_size="38sp"
                    />

            <TextView
                    android:id="@+id/termRemindTxt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PerformanceTitle"
                    android:textSize="12sp"

                    />
            <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="16dp"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    style="?android:attr/progressBarStyleHorizontal" />
        </LinearLayout>

        <LinearLayout
                android:layout_below="@id/con"
                android:layout_width="fill_parent"
                android:layout_marginTop="4dp"
                android:background="@drawable/shadow"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="4dp"
                android:orientation="vertical"
                android:gravity="end"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prescribtion"
                    android:textSize="18sp"
                    />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                    android:id="@+id/book_for_read"
                    android:layout_marginTop="16sp"
                    android:text="@string/app_name"
                    />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                    android:id="@+id/other_book_for_read"
                    android:layout_marginTop="16sp"
                    android:text="@string/app_name"
                    />

            <TextView
                    android:id="@+id/page_to100_percent"
                    android:layout_marginTop="16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                    />


            <TextView
                    android:id="@+id/page_perDay_Remind_plan"
                    android:layout_marginTop="16sp"
                    android:text="@string/app_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/book_need_toPlane"
                    android:layout_marginTop="16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                    />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>